# dreadcast

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LORE.md  PROJECT_SYSTEMS_STANDARDIZATION_OVERVIEW.md  README.md  count-loc.ps1  settings.cfg
assets/data/: abilities.json  characters.json  enemies.json  items.json  recipes.json
assets/maps/: default.map  map_001.map
docs/: DEVELOPMENT_STATE.md  content_schema.md
src/: config.hpp  game.cpp  game.hpp  main.cpp
src/core/: audio.cpp  audio.hpp  camera.cpp  camera.hpp  cursor_draw.cpp  cursor_draw.hpp  fog_visibility.cpp  fog_visibility.hpp  input.cpp  input.hpp  iso_utils.hpp  poly_helpers.hpp  resource_manager.cpp  resource_manager.hpp  timer.hpp  types.hpp
src/ecs/: combat_resolution.cpp  combat_resolution.hpp  components.hpp  enemy_factory.cpp  enemy_factory.hpp
src/game/: ability.hpp  character.hpp  crafting.cpp  crafting.hpp  enemy_archetype.hpp  equipment_snapshot.cpp  equipment_snapshot.hpp  game_data.cpp  game_data.hpp  item_effects.cpp  item_effects.hpp  item_effects_types.hpp  item_factory.hpp  item_rarity.hpp  item_transaction.cpp  item_transaction.hpp  item_transaction_self_test.cpp  items.hpp  map_data.hpp  slot_types.cpp  slot_types.hpp  world_interaction.cpp  world_interaction.hpp
src/scenes/: archive_scene.cpp  archive_scene.hpp  character_select_scene.cpp  character_select_scene.hpp  codex_scene.cpp  codex_scene.hpp  editor_scene.cpp  editor_scene.hpp  gameplay_scene.cpp  gameplay_scene.hpp  menu_scene.cpp  menu_scene.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  settings_scene.cpp  settings_scene.hpp
src/ui/: button.cpp  button.hpp  cooldown_overlay.cpp  cooldown_overlay.hpp  inventory_ui.cpp  (+6 more)
(+22 files in other folders)
